# robotframework-reporty

./: .gitignore  README.md  pyproject.toml  requirements.txt  robot.db
src/: app.py  base_app.py  dashboard.py  data_base.py  database.py  navigation.py  xml_parser.py
src/.streamlit/: config.toml
src/component/: Header.py  Table.py
src/pages/: page1.py  page2.py
