[tool.poetry]
name = "robotframework-reporty"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "Reporty", from = "src"}
]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
